syntax = "proto3";

package routeguide;

service RouteGuide {
	rpc Publish(PublishRecord) returns (Result) {}
	rpc Subscribe(Subscription) returns (Result) {}
	rpc Unsubscribe(Subscription) returns (Result) {}
	rpc Observe(Identification) returns (stream Record) {}
}

message Identification {
	string consumerID = 1;
}

message Record {
	Key key = 1;
	Message value = 2;
}

message Subscription {
	Key key = 1;
	string consumerID = 2;
}

message Key {
	string content = 1;
}

message PublishRecord {
	Key key = 1;
	bytes payload = 2;
}


message Result {
	int32 code = 1;
}

message Message {
	string id = 1;
	string timestamp = 2;
	bytes payload = 3;
}
